--- a/Dockerfile.trusty
+++ b/Dockerfile.trusty
@@ -1,5 +1,5 @@
 # Dockerfile
-FROM ubuntu:trusty
+FROM solarce/trusty-ruby
 
 ENV DEBIAN_FRONTEND noninteractive 
 #RUN echo 'deb http://deb.debian.org/debian jessie-backports main' > /etc/apt/sources.list.d/backports.list
@@ -23,9 +23,6 @@ RUN apt-get install -y \
     pristine-tar \ 
     rake \ 
     rsync \ 
-    ruby \ 
-    ruby-dev \ 
-    rubygems \ 
     wget \
     debhelper
 
