--- a/Dockerfile.wheezy
+++ b/Dockerfile.wheezy
@@ -1,13 +1,15 @@
 # Dockerfile
 FROM debian:wheezy
 
+ADD http://cache.ruby-lang.org/pub/ruby/2.1/ruby-2.1.2.tar.gz / 
+
 ENV DEBIAN_FRONTEND noninteractive 
-#RUN echo 'deb http://deb.debian.org/debian jessie-backports main' > /etc/apt/sources.list.d/backports.list
-#RUN { \
-#	echo 'Package: *'; \
-#    echo 'Pin: release a=jessie-backports'; \
-#    echo 'Pin-Priority: 501'; \
-#} > /etc/apt/preferences.d/backports.pref
+RUN echo 'deb http://deb.debian.org/debian wheezy-backports main' > /etc/apt/sources.list.d/backports.list
+RUN { \
+	echo 'Package: dh-python'; \
+    echo 'Pin: release a=wheezy-backports'; \
+    echo 'Pin-Priority: 501'; \
+} > /etc/apt/preferences.d/backports.pref
 RUN apt-get update
 RUN apt-get upgrade -y
 RUN apt-get install -y \ 
@@ -21,17 +23,21 @@ RUN apt-get install -y \
     make \ 
     openssh-client \ 
     pristine-tar \ 
-    rake \ 
     rsync \ 
-    ruby \ 
-    ruby-dev \ 
-    rubygems \ 
     wget \
-    debhelper
-
+    debhelper \
+    zlib1g-dev \
+    libssl-dev \
+    libreadline6-dev \
+    libyaml-dev \
+    dh-python
+RUN tar -xzf ruby-2.1.2.tar.gz && \
+    (cd ruby-2.1.2/ && ./configure --disable-install-doc && make && make install) && \
+    rm -rf /ruby-2.1.2* && gem install bundler --no-rdoc --no-ri
 RUN echo "gem: --no-ri --no-rdoc" >/etc/gemrc 
 RUN gem install fpm -v 1.4.0 
 RUN gem install fpm-cookery -v 0.29.0 
 RUN gem install buildtasks -v 0.0.1 
 RUN gem install bundler -v 1.10.0
+
 
